# MyScheduler

./: CMakeLists.txt
data/: main.py
data/final/: MD_avg_fit_GA.csv  MD_avg_fit_SA.csv  MD_avg_time_GA.csv  MD_avg_time_SA.csv  MD_best_fit_GA.csv  MD_best_fit_SA.csv  MD_best_time_GA.csv  MD_best_time_SA.csv  MD_fit_change_SA.csv  MD_sd_fit_GA.csv  MD_sd_fit_SA.csv  MD_sd_time_GA.csv
data/myData/: mData1.json  mData10.json  mData100.json  mData1000.json  mData1001.json  mData1002.json  mData1003.json  mData1004.json  mData1005.json  mData1006.json  mData1007.json  mData1008.json  mData1009.json  mData101.json  mData1010.json  mData1011.json  mData1012.json  mData1013.json  mData1014.json  mData1015.json  mData1016.json  mData1017.json  mData1018.json  mData1019.json  mData102.json  mData1020.json  mData1021.json  mData1022.json  mData1023.json  mData1024.json  mData1025.json  mData1026.json  mData1027.json  mData1028.json  mData1029.json  mData103.json  mData1030.json  mData1031.json  mData1032.json  mData1033.json  (+1315 more)
data/results/: MD_avg_fit_GP.csv  MD_avg_fit_MGP.csv  MD_best_fit_GP.csv  MD_best_fit_MGP.csv  MD_best_time_GP.csv  MD_best_time_MGP.csv  MD_fit_change_GP.csv  MD_fit_change_MGP.csv  MD_sd_fit_GP.csv  MD_sd_fit_MGP.csv  MD_sd_time_GP.csv  MD_sd_time_MGP.csv  fitness_GA-1.csv  fitness_GP-1.csv  fitness_SA-1.csv  fully_avg_fitness_GP-20.csv  fully_avg_fitness_GP.csv  fully_fitness_GP-20.csv  fully_fitness_GP.csv  fully_timelog_GP-20.csv  fully_timelog_GP.csv  orig_avg_fitness_GP-20.csv  orig_avg_fitness_GP.csv  orig_fitness_GP-20.csv  orig_fitness_GP.csv  orig_timelog_GP-20.csv  orig_timelog_GP.csv  timelog_GA-1.csv  timelog_GP-1.csv  timelog_SA-1.csv
include/: GA.h  GP.h  SA.h  Scheduler.h  projectConfig.h  projectConfig.h.in
src/: GA.cpp  GP.cpp  SA.cpp  Scheduler.cpp  main.cpp  plot.py
